# ors-launcher

./: .gitignore  LICENSE  README.md  prek.toml  pyproject.toml
.github/workflows/: tests.yml
openspec/changes/add-ors-launcher-cli/: design.md  proposal.md  tasks.md
openspec/changes/add-ors-launcher-cli/specs/ors-config-schema/: spec.md
openspec/changes/add-ors-launcher-cli/specs/ors-launcher-cli/: spec.md
ors_launcher/: __init__.py  config.py  constants.py  main.py
tests/: test_config.py
tests/data/: monaco.osm.pbf
tests/integration/: check_server.py  conftest.py  test_server.py
tests/unit/: test_config.py  test_main.py
