[project]
name = "ors-launcher"
version = "0.1.0"
description = "CLI for installing, configuring, and running a local OpenRouteService (ORS) instance"
readme = "README.md"
    requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "rich>=14.3.3",
    "pydantic>=2.9",
    "pyyaml>=6.0",
]

[project.scripts]
orsl = "ors_launcher.main:cli"
ors-launcher = "ors_launcher.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ors_launcher"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-aarch64", "linux-64", "win-64"]

[tool.pixi.dependencies]
python = "*"
click = "*"
rich = "*"
pydantic = "*"
pyyaml = "*"

[tool.pixi.pypi-dependencies]
ors-launcher = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.feature.dev.dependencies]
pytest = "*"

[tool.pixi.feature.dev.tasks]
test = "pytest"

